# cardissues

./: .env.example  .gitignore  AGENTS.md  CAMBIOS.md  README.md  evidencia_funcionamient.md  opencode.json  pyproject.toml
.github/prompts/: test-kb-fallback.prompt.md  test-visa-rules-search.prompt.md
data/: merchant.db
data/chroma/: .last_ingest  chroma.sqlite3
scripts/: seed.py
src/card_issues/: chroma_store.py  ingest.py  server.py  sql_generator.py  sqlite_store.py
tests/: test_chroma_store.py  test_execute_sql_query.py  test_ingest.py  test_kb_fallback.py  test_server.py  test_sql_generator.py  test_sqlite_store.py
